@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1065 2009-09-16 17:26:42 castaglia Exp $
+$Id: NEWS,v 1.1066 2009-09-23 16:00:16 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -47,6 +47,7 @@ CVS
   "{digest}" prefix required by the mod_sql OpenSSL SQLAuthType.
 - Bug 3292 - "Incorrect MAC received on packet" error using AES CTR ciphers.
 - Bug 3293 - SFTPCipher arcfour256 does not work properly.
+- Bug 3294 - Support configurable HiddenStores prefixes.
 
 1.3.3rc1 - Released 30-Jun-2009
 --------------------------------
